--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "d3": "^7.6.1",
+    "mathjs": "^11.0.1",
+    "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-d3-library": "^1.1.8",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "react-scripts": "5.0.1",
+    "react-vega": "^7.6.0",
+    "react-vis": "^1.11.7",
     "recharts": "^2.1.13",
+    "vega": "^5.22.1",
+    "vega-lite": "^5.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
