--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "d3": "^7.6.1",
+    "leaflet-geometryutil": "^0.10.1",
     "mathjs": "^11.0.1",
-    "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-d3-library": "^1.1.8",
     "react-dom": "^18.2.0",
