--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-d3-library": "^1.1.8",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-vega": "^7.6.0",
     "react-vis": "^1.11.7",
     "recharts": "^2.1.13",
+    "redux": "^4.2.0",
     "vega": "^5.22.1",
     "vega-lite": "^5.5.0",
     "web-vitals": "^2.1.4"
