--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^4.0.1",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-use-keypress": "^1.3.1",
     "react-vega": "^7.6.0",
     "react-vis": "^1.11.7",
     "recharts": "^2.1.13",
